--- a/css/CoverMapPoint.css
+++ b/css/CoverMapPoint.css
@@ -1,94 +1,105 @@
 html,
-body,
+body {
+    margin: 0 auto;
+    padding: 0;
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    position: sticky;
+}
+
 #container {
-  margin: 0 auto;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 999;
-  box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    position: sticky !important;
 }
+
 #app {
-  width: 100%;
-  height: 96%;
-  z-index: 555;
-  margin-top: -104vh;
-  padding: 0;
+    width: 100%;
+    height: 96%;
+    z-index: 555;
+    margin-top: -104vh;
+    padding: 0;
 }
+
 .serch_border {
-  width: 336px;
-  margin: 0 0 0 33px;
-  margin-top: 3.5%;
+    width: 336px;
+    margin: 0 0 0 33px;
+    margin-top: 3.5%;
 }
+
 .el-input-group__append,
 .el-input-group__prepend {
-  background-color: #0078d7;
-  color: white;
-  width: 42px;
-  text-align: center;
+    background-color: #0078d7;
+    color: white;
+    width: 42px;
+    text-align: center;
 }
+
 .el-select .el-input {
-  width: 110px;
+    width: 110px;
 }
 
 .hoting_border {
-  display: flex;
-  position: relative;
-  width: 131px;
-  height: 172px;
-  margin: 0 0 0 33px;
-  margin-top: 28%;
-  background-color: #ffffff;
-  border: 2px solid #d7d7d7;
-  border-radius: 8px;
+    display: flex;
+    position: relative;
+    width: 131px;
+    height: 172px;
+    margin: 0 0 0 33px;
+    margin-top: 28%;
+    background-color: #ffffff;
+    border: 2px solid #d7d7d7;
+    border-radius: 8px;
 }
+
 .left_hotinglevaing {
-  width: 50%;
-  display: flex;
-  margin: 20px 0 0 20px;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+    width: 50%;
+    display: flex;
+    margin: 20px 0 0 20px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
+
 .right_hotinviewg {
-  width: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
 .lineview {
-  width: 13px;
-  height: 141px;
-  border-radius: 10px;
-  background: linear-gradient(to bottom, #00ff00, #ffff00, #ff0000);
+    width: 13px;
+    height: 141px;
+    border-radius: 10px;
+    background: linear-gradient(to bottom, #00ff00, #ffff00, #ff0000);
 }
 
 .quantity_border {
-  position: relative;
-  display: flex;
-  width: 183px;
-  height: 241px;
-  margin: -174px 0 0 33px;
-  float: right;
-  margin-right: 2%;
-  margin-top: 26%;
-  background-color: #ffffff;
-  border: 2px solid #d7d7d7;
-  border-radius: 8px;
+    position: relative;
+    display: flex;
+    width: 183px;
+    height: 241px;
+    margin: -174px 0 0 33px;
+    float: right;
+    margin-right: 2%;
+    margin-top: 26%;
+    background-color: #ffffff;
+    border: 2px solid #d7d7d7;
+    border-radius: 8px;
 }
 
 .left_quantityname {
-  display: flex;
-  width: 100%;
-  height: 13%;
-  margin: 112px 0 0 12px;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+    display: flex;
+    width: 100%;
+    height: 13%;
+    margin: 112px 0 0 12px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 
-
 [v-cloak] {
-  display: none;
+    display: none;
 }
